<resources>
    <string name="app_name">Todo App</string>
    <string name="edit_title">Title</string>
    <string name="edit_description">Description</string>
    <string name="edit_date">Date</string>
    <string name="edit_priority">Priority</string>
    <string name="edit_high">High</string>
    <string name="edit_medium">Medium</string>
    <string name="edit_low">Low</string>
    <string name="edit_save">Save</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alert_cancel">Do you want to return to main screen?</string>
    <string name="alert_delete">Are you sure you want to DELETE this task?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="welcome">Welcome to Todo App</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="tag">Tag</string>
    <string name="completed">Completed</string>
    <string name="status">Status</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="pari_thapa">Pari Thangi</string>
    <string name="email_email_com">name@gmail.com</string>
    <string name="_1234567890">12345678900</string>
    <string name="min_6_characters">min 6 characters</string>
    <string name="new_user">New User</string>
    <string name="full_name">Full Name</string>
</resources>